--- a/package.json
+++ b/package.json
@@ -70,7 +70,11 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "prestart": "yarn gen:docs",
+    "start": "npm-run-all --parallel start:docs gen:docs-watch",
+    "start:docs": "node scripts/start.js",
+    "gen:docs": "node scripts/generateComponentData.js",
+    "gen:docs-watch": "yarn gen:docs -- --watch",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
