--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "eslint-webpack-plugin": "^2.1.0",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
-    "highlight.js": "^10.5.0",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
@@ -49,6 +48,7 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
+    "prismjs": "^1.23.0",
     "prompts": "2.4.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
@@ -74,7 +74,7 @@
     "start": "npm-run-all --parallel start:docs gen:docs-watch",
     "start:docs": "node scripts/start.js",
     "gen:docs": "node scripts/generateComponentData.js",
-    "gen:docs-watch": "yarn gen:docs -- --watch",
+    "gen:docs-watch": "yarn gen:docs --watch",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -151,9 +151,28 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      [
+        "prismjs",
+        {
+          "languages": [
+            "javascript",
+            "css",
+            "html"
+          ],
+          "plugins": [
+            "line-numbers",
+            "show-language"
+          ],
+          "theme": "base16-ateliersulphurpool.light",
+          "css": true
+        }
+      ]
     ]
   },
   "devDependencies": {
+    "babel-plugin-prismjs": "^2.0.1",
     "chokidar": "^3.5.0",
     "npm-run-all": "^4.1.5",
     "react-docgen": "^5.3.1"
