--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
   "devDependencies": {
     "chokidar": "^3.5.0",
     "npm-run-all": "^4.1.5",
-    "react-docgen": "^5.3.1"
+    "react-docgen": "^5.3.1",
+    "sass": "^1.32.2"
   }
 }
