--- a/package.json
+++ b/package.json
@@ -156,8 +156,12 @@
   },
   "devDependencies": {
     "chokidar": "^3.5.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "npm-run-all": "^4.1.5",
+    "react-addons-test-utils": "^15.6.2",
     "react-docgen": "^5.3.1",
+    "react-test-renderer": "^17.0.1",
     "sass": "^1.32.2"
   }
 }
